--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -41,11 +41,13 @@ library
   exposed-modules:
     Refined.Predicates.Foldable
     Refined.Predicates.Text
+    Refined.Utils
 
   build-depends:
-    , base     >=4.14.0.0 && <4.17
-    , refined  ^>=0.6
-    , text     ^>=1.2.3.2
+    , base          >=4.14.0.0 && <4.17
+    , refined       ^>=0.6
+    , text          ^>=1.2.3.2
+    , these-skinny  ^>=0.7.4
 
   hs-source-dirs:   src
   default-language: Haskell2010
