Disable doctests by default
Instead of disabling the doctests in the nix flake only
(we are also encountering them in the shell provided by nix
develop), we make the doctests run only when the RUN_DOCTEST
env var is enabled. This has a couple of advantages:

1. Opt-out, so no one will be (hopefully) taken by surprise by sudden
   flaky errors (e.g. downstream dependencies won't be screwed).
2. The doctests are still enabled by the suites that _do_ work,
   so we still get some verification that they are actually correct.

--- a/.github/workflows/cabal_ci.yaml
+++ b/.github/workflows/cabal_ci.yaml
@@ -30,3 +30,6 @@ jobs:
 
       - name: Compile
         run: nix develop --command cabal build
+
+      - name: Test
+        run: nix develop --command cabal test
