--- a/.github/workflows/ghc_8-10-7.yaml
+++ b/.github/workflows/ghc_8-10-7.yaml
@@ -33,4 +33,4 @@ jobs:
           nix-shell nix/ghc_8-10-7.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always && \
-             cabal test"
+             RUN_DOCTEST=true cabal test --test-show-details=direct"
