Add property tests, improve polymorphism
Add term implementation of polymorphism to facitilitate property
testing.

Also simplify polmorphism reduction by applying laws one at a time
(e.g. apply de morgan's law, no additional reduction.

Fix bug where Xor was reduced incorrectly.

--- a/.github/workflows/cabal_ci.yaml
+++ b/.github/workflows/cabal_ci.yaml
@@ -31,5 +31,5 @@ jobs:
       - name: Compile
         run: nix develop --command cabal build
 
-      - name: Test
-        run: nix develop --command cabal test
+      - name: Property tests
+        run: nix develop --command cabal test props
