--- a/.github/workflows/ghc_8-10-7.yaml
+++ b/.github/workflows/ghc_8-10-7.yaml
@@ -28,9 +28,16 @@ jobs:
             "cabal update && \
              cabal build --write-ghc-environment-files=always"
 
-      - name: Test
+      - name: DocTest
         run: |
           nix-shell nix/ghc_8-10-7.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always && \
-             RUN_DOCTEST=true cabal test --test-show-details=direct"
+             RUN_DOCTEST=true cabal test doctest --test-show-details=direct"
+
+      - name: Property Tests
+        run: |
+          nix-shell nix/ghc_8-10-7.nix --command \
+            "cabal update && \
+             cabal build --write-ghc-environment-files=always && \
+             MAX_RUNS=10000 cabal test props --test-show-details=direct"
