Add unit tests, fix PropEquals
- Add unit tests.
- Fix PropEquals for "nested swaps", e.g. A && (B && C) == A && (C && B).
- Move prop tests behind Polymorphism module.

--- a/hie.yaml
+++ b/hie.yaml
@@ -3,6 +3,9 @@ cradle:
     - path: "./src"
       component: "lib:refined-extras"
 
+    - path: "./test/unit"
+      component: "refined-extras:test:unit"
+
     - path: "./test/props"
       component: "refined-extras:test:props"
 
