Add more unit tests
- Add unit tests to CI.
- Improve haddock.

--- a/.github/workflows/cabal_ci.yaml
+++ b/.github/workflows/cabal_ci.yaml
@@ -31,5 +31,8 @@ jobs:
       - name: Compile
         run: nix develop --command cabal build
 
+      - name: Unit tests
+        run: nix develop --command cabal test unit
+
       - name: Property tests
         run: nix develop --command cabal test props
