--- a/.github/workflows/ghc_8-10-7.yaml
+++ b/.github/workflows/ghc_8-10-7.yaml
@@ -35,6 +35,13 @@ jobs:
              cabal build --write-ghc-environment-files=always && \
              RUN_DOCTEST=true cabal test doctest --test-show-details=direct"
 
+      - name: Unit Tests
+        run: |
+          nix-shell nix/ghc_8-10-7.nix --command \
+            "cabal update && \
+             cabal build --write-ghc-environment-files=always && \
+             cabal test unit --test-show-details=direct"
+
       - name: Property Tests
         run: |
           nix-shell nix/ghc_8-10-7.nix --command \
