Add bytestring and lazy text instances
Also add ascii-specific predicates so that we can implement
sensible instances for Word8.

--- a/cabal.project
+++ b/cabal.project
@@ -4,6 +4,7 @@ package refined
   flags: -aeson -quickcheck
 
 package refined-extras
+  tests: True
   ghc-options:
     -Wall -Wcompat -Werror -Widentities
     -Wincomplete-record-updates -Wincomplete-uni-patterns
