--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -56,10 +56,12 @@ library
     Refined.Extras.Utils
 
   build-depends:
-    , base          >=4.14.0.0 && <4.17
-    , refined       ^>=0.6
-    , text          ^>=1.2.3.2
-    , these-skinny  ^>=0.7.4
+    , base              >=4.14.0.0  && <4.17
+    , bytestring        ^>=0.10.12.0
+    , refined           ^>=0.6
+    , text              ^>=1.2.3.2
+    , text-conversions  >=0.2.0     && <0.4
+    , these-skinny      ^>=0.7.4
 
   hs-source-dirs:   src
   default-language: Haskell2010
@@ -97,13 +99,15 @@ test-suite props
 
   build-depends:
     , base
-    , hedgehog        ^>=1.0.2
+    , bytestring
+    , hedgehog          ^>=1.0.2
     , refined
     , refined-extras
-    , tagged          ^>=0.8.6
-    , tasty           >=1.1.0.3 && <1.5
-    , tasty-hedgehog  >=1.0.0.2 && <1.2
+    , tagged            ^>=0.8.6
+    , tasty             >=1.1.0.3 && <1.5
+    , tasty-hedgehog    >=1.0.0.2 && <1.2
     , text
+    , text-conversions
 
   hs-source-dirs:   test/props
   default-language: Haskell2010
