Update bounds for ghc 9.0.2 and 9.1.2

--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -3,7 +3,7 @@ name:               refined-extras
 version:            0.1.0.0
 license:            BSD-3-Clause
 license-file:       LICENSE
-tested-with:        GHC ==8.10.7
+tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.1
 copyright:          2021 Thomas Bidne
 author:             Thomas Bidne
 maintainer:         tbidne@prontonmail.com
@@ -57,7 +57,7 @@ library
 
   build-depends:
     , base              >=4.14.0.0  && <4.17
-    , bytestring        ^>=0.10.12.0
+    , bytestring        >=0.10.12.0 && <=0.12
     , refined           ^>=0.6
     , text              ^>=1.2.3.2
     , text-conversions  >=0.2.0     && <0.4
@@ -100,7 +100,7 @@ test-suite props
   build-depends:
     , base
     , bytestring
-    , hedgehog          ^>=1.0.2
+    , hedgehog          >=1.0.2   && <1.2
     , refined
     , refined-extras
     , tagged            ^>=0.8.6
