Add operator for Implies

--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -24,6 +24,7 @@ source-repository head
 
 common common-exts
   default-extensions:
+    ConstraintKinds
     DataKinds
     DeriveGeneric
     DerivingVia
