--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -98,18 +98,18 @@ test-suite props
     Tests.Polymorphism.Implies
     Tests.Predicates.Foldable
     Tests.Predicates.Text
+    Utils
 
   build-depends:
     , base
     , bytestring
-    , hedgehog          >=1.0.2   && <1.2
+    , hedgehog        >=1.0.2   && <1.2
     , refined
     , refined-extras
-    , tagged            ^>=0.8.6
-    , tasty             >=1.1.0.3 && <1.5
-    , tasty-hedgehog    >=1.0.0.2 && <1.2
+    , tagged          ^>=0.8.6
+    , tasty
+    , tasty-hedgehog  >=1.0.0.2 && <1.3
     , text
-    , text-conversions
 
   hs-source-dirs:   test/props
   default-language: Haskell2010
