--- a/.github/workflows/ghc_8-10.yaml
+++ b/.github/workflows/ghc_8-10.yaml
@@ -20,31 +20,31 @@ jobs:
       - name: Setup nix
         uses: cachix/install-nix-action@v12
         with:
-          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/5bb20f9dc70e9ee16e21cc404b6508654931ce41.tar.gz
+          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/1ffba9f2f683063c2b14c9f4d12c55ad5f4ed887.tar.gz
 
       - name: Compile
         run: |
-          nix-shell nix/ghc_8-10-7.nix --command \
+          nix-shell nix/ghc_8-10.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always"
 
       - name: DocTest
         run: |
-          nix-shell nix/ghc_8-10-7.nix --command \
+          nix-shell nix/ghc_8-10.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always && \
              RUN_DOCTEST=true cabal test doctest --test-show-details=direct"
 
       - name: Unit Tests
         run: |
-          nix-shell nix/ghc_8-10-7.nix --command \
+          nix-shell nix/ghc_8-10.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always && \
              cabal test unit --test-show-details=direct"
 
       - name: Property Tests
         run: |
-          nix-shell nix/ghc_8-10-7.nix --command \
+          nix-shell nix/ghc_8-10.nix --command \
             "cabal update && \
              cabal build --write-ghc-environment-files=always && \
              MAX_RUNS=10000 cabal test props --test-show-details=direct"
