--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -60,7 +60,7 @@ library
     , base              >=4.14.0.0  && <4.17
     , bytestring        >=0.10.12.0 && <0.12
     , refined           ^>=0.6
-    , text              ^>=1.2.3.2
+    , text              >=1.2.3.2   && <2.1
     , text-conversions  >=0.2.0     && <0.4
     , these-skinny      ^>=0.7.4
 
