--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -3,7 +3,7 @@ name:               refined-extras
 version:            0.1.0.0
 license:            BSD-3-Clause
 license-file:       LICENSE
-tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.2
+tested-with:        GHC ==8.10.7 || ==9.0.2 || ==9.2.3
 copyright:          2021 Thomas Bidne
 author:             Thomas Bidne
 maintainer:         tbidne@protonmail.com
@@ -120,7 +120,8 @@ test-suite doctest
   main-is:          Main.hs
   build-depends:
     , base
-    , doctest  >=0.16.3 && <0.21
+    , doctest    >=0.16.3 && <0.21
+    , env-guard  ^>=0.2
 
   hs-source-dirs:   test/doctest
   default-language: Haskell2010
