--- a/cabal.project
+++ b/cabal.project
@@ -9,4 +9,6 @@ package refined-extras
     -Wall -Wcompat -Werror -Widentities
     -Wincomplete-record-updates -Wincomplete-uni-patterns
     -Wmissing-home-modules -Wmissing-export-lists -Wpartial-fields
-    -Wredundant-constraints -Wunused-packages
+    -Wredundant-constraints -Wunused-packages -Wmissing-deriving-strategies
+
+test-show-details: direct
