--- a/.github/workflows/nix.yaml
+++ b/.github/workflows/nix.yaml
@@ -8,28 +8,27 @@ on:
   pull_request:
     branches:
       - main
-  
+
   workflow_dispatch:
 
 jobs:
   nix:
-    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          - "macos-latest"
+          - "ubuntu-latest"
+    runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3.0.2
+      - uses: actions/checkout@v3
 
       - name: Setup nix
-        uses: cachix/install-nix-action@v17
+        uses: cachix/install-nix-action@v20
         with:
           nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/b39924fc7764c08ae3b51beef9a3518c414cdb7d.tar.gz
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
-      
-      - name: Compile & Test
-        run: |
-          nix build
-          if [ -d "./result/lib" ]; then
-            echo "Build succeeded"
-          else
-            echo "Build failed"
-            exit -1
-          fi
+
+      - name: Build
+        run: nix build
