--- a/.github/workflows/style.yaml
+++ b/.github/workflows/style.yaml
@@ -15,26 +15,17 @@ jobs:
   check-style:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3.0.2
+      - uses: actions/checkout@v3
 
       - name: Setup nix
-        uses: cachix/install-nix-action@v17
+        uses: cachix/install-nix-action@v20
         with:
           nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/b39924fc7764c08ae3b51beef9a3518c414cdb7d.tar.gz
           extra_nix_config: |
             access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
 
-      - name: cabal-fmt
-        run: make cabalfmtc
+      - name: Format
+        run: nix develop .#ci -c bash -c "make formatc"
 
-      - name: hlint
-        run: make lintc
-
-      - name: ormolu
-        run: make hsformatc
-
-      - name: nixpkgs-fmt
-        run: make nixpkgsfmtc
-
-      - name: haddock
-        run: nix-shell --command "cabal update && make haddockc" nix/cabal_9-2.nix
+      - name: Lint
+        run: nix develop .#ci -c bash -c "make lintc"
