--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -85,6 +85,7 @@ test-suite unit
     , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
+  ghc-options:      -threaded -with-rtsopts=-N
   default-language: Haskell2010
 
 test-suite props
@@ -114,6 +115,7 @@ test-suite props
     , text
 
   hs-source-dirs:   test/props
+  ghc-options:      -threaded -with-rtsopts=-N
   default-language: Haskell2010
 
 test-suite doctest
