--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,9 +19,10 @@ jobs:
         ghc:
           - "8.10.7"
           - "9.0.2"
-          - "9.2.7"
-          - "9.4.5"
-          - "9.6.1"
+          - "9.2.8"
+          - "9.4.7"
+          - "9.6.3"
+          - "9.8.1"
         os:
         - "macos-latest"
         - "ubuntu-latest"
@@ -30,7 +31,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: haskell/actions/setup@v2
+      - uses: haskell-actions/setup@v2
         with:
           ghc-version: ${{ matrix.ghc }}
 
