--- a/refined-extras.cabal
+++ b/refined-extras.cabal
@@ -4,7 +4,7 @@ version:            0.1.0.0
 license:            BSD-3-Clause
 license-file:       LICENSE
 tested-with:
-  GHC ==8.10.7 || ==9.0.2 || ==9.2.7 || ==9.4.5 || ==9.6.1
+  GHC ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.7 || ==9.6.3 || ==9.8.1
 
 copyright:          2021-2023 Thomas Bidne
 author:             Thomas Bidne
@@ -59,10 +59,10 @@ library
     Refined.Extras.Utils
 
   build-depends:
-    , base              >=4.14.0.0  && <4.19
-    , bytestring        >=0.10.12.0 && <0.12
+    , base              >=4.14.0.0  && <4.20
+    , bytestring        >=0.10.12.0 && <0.13
     , refined           >=0.6       && <0.9
-    , text              >=1.2.3.2   && <2.1
+    , text              >=1.2.3.2   && <2.2
     , text-conversions  >=0.2.0     && <0.4
     , these-skinny      ^>=0.7.4
 
@@ -81,7 +81,7 @@ test-suite unit
     , base
     , refined
     , refined-extras
-    , tasty           >=1.1.0.3 && <1.5
+    , tasty           >=1.1.0.3 && <1.6
     , tasty-hunit     >=0.9     && <0.11
 
   hs-source-dirs:   test/unit
@@ -106,7 +106,7 @@ test-suite props
   build-depends:
     , base
     , bytestring
-    , hedgehog        >=1.0.2   && <1.3
+    , hedgehog        >=1.0.2   && <1.5
     , refined
     , refined-extras
     , tagged          ^>=0.8.6
@@ -124,7 +124,7 @@ test-suite doctest
   main-is:          Main.hs
   build-depends:
     , base
-    , doctest    >=0.16.3 && <0.22
+    , doctest    >=0.16.3 && <0.23
     , env-guard  ^>=0.2
 
   hs-source-dirs:   test/doctest
