--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -23,29 +23,31 @@ jobs:
           - "9.4.7"
           - "9.6.3"
           - "9.8.1"
+          - "9.10.1"
         os:
-        - "macos-latest"
-        - "ubuntu-latest"
-        - "windows-latest"
+          - "macos-latest"
+          - "ubuntu-latest"
+          - "windows-latest"
+        exclude:
+          - {ghc: "8.10.7", os: "macos-latest"}
+          - {ghc: "9.0.2", os: "macos-latest"}
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - uses: haskell-actions/setup@v2
         with:
           ghc-version: ${{ matrix.ghc }}
 
+      - name: Configure
+        run: cabal configure --enable-tests --ghc-options -Werror
+
       - name: Compile
         run: cabal build
 
       - name: Doc Tests
-        if: ${{ matrix.ghc == '9.6.1' && matrix.os != 'windows-latest' }}
-        run : |
-          cabal configure \
-            --enable-tests \
-            --write-ghc-environment-files always
-          cabal build
-          RUN_DOCTEST=1 cabal test doctest
+        if: ${{ matrix.ghc == '9.10.1' && matrix.os != 'windows-latest' }}
+        run : ./tools/doctest.sh
 
       - name: Unit Tests
         run: cabal test unit
@@ -61,28 +63,26 @@ jobs:
         - "ubuntu-latest"
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup nix
-        uses: cachix/install-nix-action@v20
+        uses: cachix/install-nix-action@v25
         with:
-          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/897876e4c484f1e8f92009fd11b7d988a121a4e7.tar.gz
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Compile & Test
         run: nix build
   lint:
     runs-on: "ubuntu-latest"
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Setup nix
-        uses: cachix/install-nix-action@v20
+        uses: cachix/install-nix-action@v25
         with:
-          nix_path: nixpkgs=https://github.com/NixOS/nixpkgs/archive/897876e4c484f1e8f92009fd11b7d988a121a4e7.tar.gz
-          extra_nix_config: |
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          github_access_token: ${{ secrets.GITHUB_TOKEN }}
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Formatting
         run: |
