Run doctests as external cabal command

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,9 +20,9 @@ jobs:
           - "8.10.7"
           - "9.0.2"
           - "9.2.8"
-          - "9.4.7"
-          - "9.6.3"
-          - "9.8.1"
+          - "9.4.8"
+          - "9.6.6"
+          - "9.8.4"
           - "9.10.1"
           - "9.12.1"
         os:
@@ -46,9 +46,17 @@ jobs:
       - name: Compile
         run: cabal build
 
-      - name: Doc Tests
-        if: ${{ matrix.ghc == '9.10.1' && matrix.os != 'windows-latest' }}
-        run : ./tools/doctest.sh
+      - name: Doctests
+        if: ${{ matrix.ghc == '9.8.4'
+             || matrix.ghc == '9.10.1'
+             || matrix.ghc == '9.12.1'
+            }}
+        run: |
+          echo "*** Installing doctest ***"
+          cabal install --ignore-project doctest --flag cabal-doctest
+
+          echo "*** Running doctest ***"
+          cabal doctest
 
       - name: Unit Tests
         run: cabal test unit
